--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -14,6 +14,6 @@ jobs:
 
       - name: Build the Keycloak Docker image with RabbitMQ event publisher SPI
         run: |
-          docker build . --tag ghcr.io/tpb1908/kc-with-spi:latest
-          docker run ghcr.io/tpb1908/kc-with-spi:latest
-          docker push ghcr.io/tpb1908/kc-with-spi:latest
+          docker build . --tag ghcr.io/TPB-DEMO-PROJECT//kc-with-spi:latest
+          docker run ghcr.io/TPB-DEMO-PROJECT//kc-with-spi:latest
+          docker push ghcr.io/TPB-DEMO-PROJECT//kc-with-spi:latest
